fix: simplify, remove Context, fix layout issues

--- a/src/components/Timer/Timer.module.css
+++ b/src/components/Timer/Timer.module.css
@@ -1,14 +1,4 @@
 .label {
-  /* Create a flexible box that centers content vertically and horizontally */
-  display: flex;
-  align-items: center;
-  justify-content: center;
-
-  /* Size should match the parent container */
-  width: var(--container-size);
-  max-width: var(--max-container-size);
-  height: var(--container-size);
-  max-height: var(--max-container-size);
   color: var(--new-text-color);
   font-size: calc(2.3rem + 1vw);
 }
@@ -19,9 +9,12 @@
   max-width: var(--max-container-size);
   height: var(--container-size);
   max-height: var(--max-container-size);
+  display: flex;
+  align-items: center;
+  flex-direction: column;
 }
 
-.controlsArea {
+.controlsBox {
   display: flex;
   flex-direction: column;
   align-items: center;
